--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
 
+    
 </head>
 <body>
     
@@ -27,11 +28,11 @@
     <nav class="navbar">
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#education">education</a></li>
-            <li><a href="#projects">projects</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#moocs">MOOCs</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -46,7 +47,7 @@
 <section class="home" id="home">
 
     <h3>HI THERE !</h3>
-    <h1>I'M <span>Shivam Kumar</span></h1>
+    <h1>I'm <span class="multiple-text"></span></h1>
     <p>I am a 4th year undergraduate student at techno main salt lake. I am pursuing my b.tech in information technology. 
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
@@ -59,25 +60,25 @@
 
 <section class="about" id="about">
 
-<h1 class="heading"> <span>about</span> me </h1>
+<h1 class="heading"> <span>About</span> me </h1>
 
 <div class="row">
 
     <div class="info">
-        <h3> <span> name : </span> shivam kumar </h3>
-        <h3> <span> age : </span> 21 </h3>
-        <h3> <span> qualification : </span> B.Tech </h3>
-        <h3> <span> stream : </span> information technology </h3>
-        <h3> <span> college : </span> techno main salt lake </h3>
-        <h3> <span> language : </span> english, hindi </h3>
-        <a href="CV_Shivam Kumar.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <h3> <span> Name : </span> Shivam kumar </h3>
+        <h3> <span> Age : </span> 21 </h3>
+        <h3> <span> Qualification : </span> B.Tech </h3>
+        <h3> <span> Stream : </span> Information Technology </h3>
+        <h3> <span> College : </span> Techno Main Salt Lake </h3>
+        <h3> <span> Language : </span> English, Hindi </h3>
+        <a href="CV_Shivam Kumar.pdf"><button class="btn"> Download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
 
         <div class="box">
             <span>3+</span>
-            <h3>coding language<br>(C/C++, python, java)</h3>
+            <h3>Coding language<br>(C/C++, Python, Java)</h3>
         </div>
 
         <div class="box">
@@ -92,7 +93,7 @@
 
         <div class="box">
             <span>1st</span>
-            <h3>round qualified in eureka</h3>
+            <h3>Round qualified in eureka</h3>
         </div>
 
     </div>
@@ -107,7 +108,7 @@
 
 <section class="education" id="education">
 
-<h1 class="heading"> my <span>education</span> </h1>
+<h1 class="heading"> My <span>Education</span> </h1>
 
 <div class="box-container">
 
@@ -129,7 +130,7 @@
         <i class="fas fa-graduation-cap"></i>
         <span>2023</span>
         <h3>B.Tech</h3>
-        <p>information technology<br>techno main salt lake<br>8.96 CGPA</p>
+        <p>Information Technology<br>Techno Main Salt Lake<br>8.96 CGPA</p>
     </div>
 
 </div>
@@ -138,26 +139,26 @@
 <!-- education section ends  -->
 <!-- Projects section starts  -->
 <section class="projects" id="projects">
-<h1 class="heading"> my <span>projects</span> </h1>
+<h1 class="heading"> My <span>Projects</span> </h1>
 
 <div class="box-container">
 
     <div class="box">
-        <!-- <i class="fas fa-graduation-cap"></i> -->
+        <i class="fas fa-diagram-project"></i>
         <span>2019</span>
         <h3>front end development</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
+        <i class="fas fa-diagram-project"></i>
         <span>2020</span>
         <h3>front end development</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
+        <i class="fas fa-diagram-project"></i>
         <span>2021</span>
         <h3>front end development</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
@@ -173,7 +174,7 @@
 
 <section class="moocs" id="moocs">
 
-<h1 class="heading"> <span>MOOCs</span> done</h1>
+<h1 class="heading"> <span>MOOCs</span> Done</h1>
 
 <div class="box-container">
 
@@ -211,18 +212,19 @@
 
 <section class="contact" id="contact">
 
-<h1 class="heading"> <span>contact</span> me </h1>
+<h1 class="heading"> <span>Contact</span> Me </h1>
 
 <div class="row">
 
     <div class="content">
 
-        <h3 class="title">contact info</h3>
+        <h3 class="title">Contact Info</h3>
 
         <div class="info">
             <h3> <i class="fas fa-envelope"></i> shivamsks219@gmail.com </h3>
             <h3> <i class="fas fa-phone"></i> +91 70048 83809 </h3>
-            <h3> <i class="fas fa-map-marker-alt"></i> kolkata, India - 700105. </h3>
+            <h3> <i class="fab fa-linkedin-in"></i> https://linkedin.in/shivam-kumar-sks </h3>
+            <h3> <i class="fas fa-map-marker-alt"></i> Kolkata, India - 700105. </h3>
         </div>
 
     </div>
@@ -256,7 +258,8 @@
 
 <!-- custom js file link  -->
 <script src="script.js"></script>
-
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<script src="add.js"></script>
 
 </body>
 </html>
