--- a/index.html
+++ b/index.html
@@ -145,9 +145,12 @@
 
     <div class="box">
         <i class="fas fa-diagram-project"></i>
-        <span>2019</span>
-        <h3>front end development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <span>2022</span>
+        <h3>full stack development</h3>
+        <p>Voice chat : A Django webapp that allows user to ask queries to chat gpt and it will return the output in both written as well as vocal</p>
+        <p>Similar User Interface as ChatGPT</p>
+        <p>Improves the Chat GPT as it adds voice command</p>
+    
     </div>
 
     <div class="box">
