--- a/index.html
+++ b/index.html
@@ -147,24 +147,32 @@
         <i class="fas fa-diagram-project"></i>
         <span>2022</span>
         <h3>full stack development</h3>
-        <p>Voice chat : A Django webapp that allows user to ask queries to chat gpt and it will return the output in both written as well as vocal</p>
+        <p>Voice chat : A Django web app that allows user to ask queries to chat gpt and it will return the output in both written as well as vocal</p>
         <p>Similar User Interface as ChatGPT</p>
         <p>Improves the Chat GPT as it adds voice command</p>
-    
-    </div>
-
-    <div class="box">
-        <i class="fas fa-diagram-project"></i>
-        <span>2020</span>
-        <h3>front end development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <span><a href="https://github.com/shivamsks219/VoiceChat">Github Link</span>
     </div>
 
     <div class="box">
         <i class="fas fa-diagram-project"></i>
         <span>2021</span>
-        <h3>front end development</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <h3>full stack development</h3>
+        <p>Sentiment Analyzer </p>
+        <p>Streamlit to create GUI and hosting</p>
+        <p>VADER used for finding the Sentiment of the Text</p>
+        <p>Deployed on cloud</p>
+        <span><a href="https://sentimentt.streamlit.app">Live Link</span>
+    </div>
+
+    <div class="box">
+        <i class="fas fa-diagram-project"></i>
+        <span>2021</span>
+        <h3>Backend development</h3>
+        <p>Python IDE</p>
+        <p>Simple GUI IDE made using Tkinter</p>
+        <p>Subprocess module used to execute the program</p>
+        <p>Simple Desktop app that can edit, save and run python programs</p>
+        <span><a href="https://github.com/shivamsks219/Python-IDE">Github Link</span>
     </div>
 
 </div>
