--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h3> <span> Stream : </span> Information Technology </h3>
         <h3> <span> College : </span> Techno Main Salt Lake </h3>
         <h3> <span> Language : </span> English, Hindi </h3>
-        <a href="CV_Shivam Kumar.pdf"><button class="btn"> Download CV <i class="fas fa-download"></i> </button></a>
+        <a href="Shivam_Kumar_Resume.pdf"><button class="btn"> Download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
