--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <h3>HI THERE !</h3>
     <h1>I'm <span class="multiple-text"></span></h1>
-    <p>I am a 4th year undergraduate student at techno main salt lake. I am pursuing my b.tech in information technology. 
+    <p>I am a 4th year undergraduate student at Techno Main Salt Lake. I am pursuing my B.Tech in Information Technology. 
     </p>
-    <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+    <a href="#about"><button class="btn">About me <i class="fas fa-user"></i></button></a>
 
 </section>
 
@@ -78,7 +78,7 @@
 
         <div class="box">
             <span>3+</span>
-            <h3>Coding language<br>(C/C++, Python, Java)</h3>
+            <h3>Coding language<br>(C/C++, Python, SQL)</h3>
         </div>
 
         <div class="box">
