--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@
         <i class="fas fa-diagram-project"></i>
         <span>2022</span>
         <h3>full stack development</h3>
-        <p>Voice chat : A Django web app that allows user to ask queries to chat gpt and it will return the output in both written as well as vocal</p>
+        <p>Voice chat</p>
+        <p>A Django web app that allows user to ask queries to chat gpt and it will return the output in both written as well as vocal</p>
         <p>Similar User Interface as ChatGPT</p>
         <p>Improves the Chat GPT as it adds voice command</p>
-        <span><a href="https://github.com/shivamsks219/VoiceChat">Github Link</span>
+        <a href="https://github.com/shivamsks219/VoiceChat"><button class="btn">Github Link<i class="fas fa-download"></i> </button>
     </div>
 
     <div class="box">
@@ -161,7 +162,7 @@
         <p>Streamlit to create GUI and hosting</p>
         <p>VADER used for finding the Sentiment of the Text</p>
         <p>Deployed on cloud</p>
-        <span><a href="https://sentimentt.streamlit.app">Live Link</span>
+        <a href="https://sentimentt.streamlit.app"><button class="btn">Live Link<i class="fas fa-download"></i> </button>
     </div>
 
     <div class="box">
@@ -172,7 +173,7 @@
         <p>Simple GUI IDE made using Tkinter</p>
         <p>Subprocess module used to execute the program</p>
         <p>Simple Desktop app that can edit, save and run python programs</p>
-        <span><a href="https://github.com/shivamsks219/Python-IDE">Github Link</span>
+        <a href="https://github.com/shivamsks219/Python-IDE"><button class="btn">Github Link<i class="fas fa-download"></i> </button>
     </div>
 
 </div>
