--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="box">
         <i class="fas fa-diagram-project"></i>
         <span>2022</span>
-        <h3>full stack development</h3>
+        <h3>Full stack development</h3>
         <p>Voice chat</p>
         <p>A Django web app that allows user to ask queries to chat gpt and it will return the output in both written as well as vocal</p>
         <p>Similar User Interface as ChatGPT</p>
@@ -157,7 +157,7 @@
     <div class="box">
         <i class="fas fa-diagram-project"></i>
         <span>2021</span>
-        <h3>full stack development</h3>
+        <h3>Full stack development</h3>
         <p>Sentiment Analyzer </p>
         <p>Streamlit to create GUI and hosting</p>
         <p>VADER used for finding the Sentiment of the Text</p>
